color contrast issues and colorPicker role

--- a/src/components/Welcome/styles.css
+++ b/src/components/Welcome/styles.css
@@ -8,7 +8,7 @@
 }
 
 .instructions {
-  color: #9e9e9e;
+  color: #746767;
   font-family: sans-serif;
   user-select: none;
 }
